Begins using params

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,10 @@
 <html>
 <link href="/css/styles.css" rel="stylesheet" type="text/css" />
   <body>
-    <img src="/images/Untitled-1.png" alt="Battleships">
+    <center>
+    <img src="/images/Untitled-1.png" alt="Battleships" align="middle">
+
     <%= yield %>
+    </center>
   </body>
 </html>
