--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -1,1 +1,6 @@
-player_one: <%= @player_one_name %>
+<% if session[:name] != "" %>
+<h1>Hello, <%= @name %> <br> <br> Welcome to Battleships </h1>
+<% else %>
+No name given.
+<% end %>
+<%=@age%>
