--- a/views/name.erb
+++ b/views/name.erb
@@ -3,7 +3,8 @@
 <form action="/new_game" method="post">
   <br>
   <br>
-  Name: <input type="text" name="player_name">
-  <input type="text" name="age">
-        <input type="submit" value="Submit">
+  <input type="text" placeholder="name" name="player_name">
+  <input type="text" placeholder="What size of board? e.g. 9" name="board_size">
+  <input type="text" placeholder="How many ships do you want? e.g. 3" name="pieces_count">
+  <input type="submit" value="Submit">
 </form>
